@@ -38,3 +38,4 @@
 05-Mar-2024 - V0.42 Adjust RepositoryProvider to support BCIF loading and CSM scaling
 19-Mar-2024 - V0.43 Raise exception and return empty list if not all dataContainers are properly read from file in __mergeContainers()
 29-May-2024 - V0.44 Fix pylinting
+ 1-Jul-2024 - V0.45 Update CurrentHoldingsProvider to stop including DSN6 maps
